# rust-learn

./: .env  Cargo.toml  Dockerfile  Rocket.toml  build.rs  diesel-dict.toml  log4rs.yaml  settings.toml
.cargo/: config.toml
.github/workflows/: demo.yml
src/: api_response.rs  config.rs  demo_controller.rs  initial.rs  jwt_util.rs  jwt_util_copy.rs  login_user_info.rs  main-bak.rs  main-collect.rs  main-consume-producer.rs  main-experience.rs  main-letcode.rs  main-render-server.rs  main-return-stream-invalid.rs  main-sse-client.rs  main-sse-sender-demo.rs  main-sse-test.rs  main-static-link.rs  main-synctex-parser.rs  main-xelatex.rs  main.rs  meta.rs  models.rs  page_query_handler.rs  pagination.rs  schema.rs  synctex.rs  token.rs
src/common/: database.rs  mod.rs
src/controller/: mod.rs
src/controller/app/: alt_app_controller.rs  mod.rs
src/controller/health/: health_controller.rs
src/controller/tag/: mod.rs  tag_controller.rs
src/model/alternative/app/: AltAppItem.rs  AltAppPage.rs
src/model/diesel/: mod.rs
src/model/diesel/alt/: alt_models.rs  alt_schema.rs  custom_alt_models.rs  mod.rs
src/model/diesel/dict/: dict_models.rs  dict_schema.rs
src/service/tag/: mod.rs  tag_service.rs
tests/: demo.rs
tex/: demo.synctex
