[package]
name = "rust-learn"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4"
tokio = { version = "1.17.0", features = ["full"] }
diesel = { version = "2.0.4", features = ["postgres","64-column-tables","chrono","serde_json"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
rust_wheel = { git = "https://github.com/jiangxiaoqiang/rust_wheel.git", branch = "diesel2.0", features = ["model","common","rwconfig"]}
openssl = "0.10"
openssl-sys = "0.9"